# ChainMerge

./: .env.example  .gitignore  ALCHEMY_README.md  ALPHA_NEXUS_README.md  ARCH_RUST_TO_SDK.md  CAPABILITIES_README.md  CHAINMERGE_DOC.md  CHAINMERGE_SDK_DOC.md  Dockerfile  FINAL_README.md  IMPACT_ADVANCEMENTS_DEEPMIND_README.md  Makefile  README.md  REPORT_README.md  SETUP_README.md  STARTUP_README.md  USAGE_README.md  WHATS_CHAINMERGE.md  chainmerge-sdk.md  iq_ai_chainmerge_integration.md  new_implementation_plan.md  package-lock.json  package.json  project_context.md  rpcURLS.MD  status.txt  unmerged.txt
.github/workflows/: ci.yml  publish-python-sdk.yml
apps/extension/: README.md  background.js  content.js  manifest.json  panel.css  popup.html  popup.js
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
core/chainmerge/: Cargo.toml
core/chainmerge/src/: errors.rs  lib.rs
core/chainmerge/src/chainrpc/: mod.rs
core/chainmerge/src/chains/: mod.rs
core/chainmerge/src/chains/aptos/: mod.rs
core/chainmerge/src/chains/bitcoin/: mod.rs
core/chainmerge/src/chains/cosmos/: mod.rs
core/chainmerge/src/chains/ethereum/: mod.rs
core/chainmerge/src/chains/polkadot/: mod.rs
core/chainmerge/src/chains/solana/: mod.rs
core/chainmerge/src/chains/starknet/: mod.rs
core/chainmerge/src/chains/sui/: mod.rs
core/chainmerge/src/normalizer/: mod.rs
core/chainmerge/src/traits/: mod.rs
core/chainmerge/src/types/: mod.rs
core/chainmerge/tests/fixtures/cosmos/: msg_send_tx.json
core/chainmerge/tests/fixtures/ethereum/: erc20_receipt.json
docs/: runbook.md
sdk/js/: README.md  package-lock.json  package.json  test_api.ts  tsconfig.build.tsbuildinfo
sdk/js/src/: client.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/chaincodec_sdk/: __init__.py  client.py  errors.py  types.py
sdk/python/chainmerge_sdk/: __init__.py  client.py  errors.py  types.py
sdk/python/tests/: test_client.py
services/api/: Cargo.toml
services/api/src/: main.rs
