[package]
name = "chainmerge"
version = "0.1.0"
edition = "2021"

[lib]
name = "chainmerge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_json = "1"
ureq = { version = "2", default-features = true, features = ["json"] }
num-bigint = "0.4"
once_cell = "1"
