[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaincodec-sdk"
version = "0.1.0"
description = "Python SDK for the ChainCodec multichain transaction decoder API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ChainCodec Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/I-lost-everytime/Chaincodec"
Repository = "https://github.com/I-lost-everytime/Chaincodec"
Issues = "https://github.com/I-lost-everytime/Chaincodec/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaincodec_sdk*"]

[tool.setuptools.package-data]
chaincodec_sdk = ["py.typed"]
