[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainmerge-sdk"
version = "1.1.2"
description = "Python SDK for the ChainMerge multichain transaction decoder API."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ChainMerge Maintainers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/I-lost-everytime/ChainMerge"
Repository = "https://github.com/I-lost-everytime/ChainMerge"
Issues = "https://github.com/I-lost-everytime/ChainMerge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chainmerge_sdk*", "chaincodec_sdk*"]

[tool.setuptools.package-data]
chainmerge_sdk = ["py.typed"]
chaincodec_sdk = ["py.typed"]
