[package]
name = "chainmerge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chainmerge = { path = "../../core/chainmerge" }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"

[dev-dependencies]
tower = "0.5"
